--- a/app/corstutorial/package.json
+++ b/app/corstutorial/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sidemenu",
+  "name": "corstutorial",
   "version": "1.0.0",
-  "description": "sidemenu: An Ionic project",
+  "description": "corstutorial: An Ionic project",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^1.3.3",
