--- a/app/corstutorial/bower.json
+++ b/app/corstutorial/bower.json
@@ -2,6 +2,7 @@
   "name": "HelloIonic",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0"
+    "ionic": "driftyco/ionic-bower#1.0.0",
+    "angular-cookies": "angular/bower-angular-cookies#1.3.13"
   }
 }
